finished Csocket working on server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_library(https_serverC STATIC
         parser/parser.h
         server/server.c
         server/socket.c
+        server/socket.c
 )
