--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ project(https_serverC C)
 set(CMAKE_C_STANDARD 11)
 
 add_library(https_serverC STATIC
-        server/server.c
-        server/server.h
-        server/router.c
+        http/src/server/server.c
+        http/src/server/server.h
+        http/src/server/router.c
         parser/parser.c
         parser/parser.h
-        server/server.c
-        server/socket.c
-        server/socket.c
+        http/src/server/server.c
+        http/src/server/socket.c
+        http/src/server/socket.c
 )
