--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(https_serverC C)
 set(CMAKE_C_STANDARD 11)
 
 add_library(https_serverC STATIC
-        http/src/server/server.h
-        http/src/server/router.c
+        server/server.h
+        server/router.c
         parser/parser.c
         parser/parser.h
-        http/src/server/server.c
-        http/src/server/socket.c
+        server/server.c
+        server/socket.c
 )
 
