updated CMake to C23; adjusted thpool.c to ignore SIGUSR1 on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,27 @@
 cmake_minimum_required(VERSION 4.0)
-project(https_serverC C)
+project(http_serverC C)
 
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD 23)
 
-add_library(https_serverC STATIC
-        server/server.h
-        server/router.c
+include_directories(hashmap)
+include_directories(parser)
+include_directories(server)
+include_directories(threadpool)
+
+add_executable(http_serverC
+        hashmap/hash.c
+        hashmap/hash.h
+        hashmap/hashmap.c
+        hashmap/hashmap.h
         parser/parser.c
         parser/parser.h
-        server/server.c
-        server/socket.c
-        main.c
         server/internalhandlers.c
+        server/router.c
         server/router.h
+        server/server.c
+        server/server.h
+        server/socket.c
         server/socket.h
-)
-
+        threadpool/thpool.c
+        threadpool/thpool.h
+        main.c)
