--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_executable(http_serverC
         server/socket.h
         threadpool/thpool.c
         threadpool/thpool.h
-        main.c
+        example.c
         Stringbuilder/StringBuilder.c
         Stringbuilder/StringBuilder.h
         Stringbuilder/linkedLIst.c
